[IMP] Upgrade to java 25.